<resources>
    <string name="app_name">Rovix</string>

    <string name="action_settings">Settings</string>

    <string name="home_item">Home</string>
    <string name="productos_item">Productos</string>
    <string name="compras_item">Carrito</string>
    <string name="ordenes_item">Ordenes</string>
    <string name="facturas_item">Facturas</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="log_in_item">Iniciar Sesión</string>
    <string name="recursos">Recursos</string>
    <string name="nuevo">Nuevo</string>
    <string name="perfil">Perfil</string>
    <string name="about">About</string>
    <string name="configuracion_item">Configuración</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="android_layout_arrays">
        <item>Libro</item>
        <item>Canal</item>
        <item>Blog</item>
        <item>Plataforma</item>
        <item>Repo</item>
        <item>Podcast</item>
    </string-array>
</resources>
