<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_three_books"
            android:title="@string/recursos" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_add"
            android:title="@string/nuevo" />
        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/ic_user"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_ordenes"
            android:icon="@drawable/ic_information"
            android:title="@string/about" />
        <!--<item
            android:id="@+id/nav_facturas"
            android:icon="@drawable/ic_file_document"
            android:title="@string/facturas_item" />-->

        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">
            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/log_out_item" />
            </menu>
        </item>
    </group>

</menu>
